--- a/Site Completo/HDP-site/dashInicio.html
+++ b/Site Completo/HDP-site/dashInicio.html
@@ -72,9 +72,9 @@
                 </div>
                 <div class="card">
                     <div class="cardInt">
-                        <h1 style="color: #B62727;">2 hrs</h1>
+                        <h1 style="color: #B62727;">+2 hrs</h1>
                         <h4>4 | 6</h4>
-                        <h5>Salas</h5>
+                        <h5>Salas fora do Ideal</h5>
                     </div>
                     <div><a href="tela-info2.html"><button>SAIBA MAIS</button></a></div>
                     <div class="infoExtra">
