--- a/Site Completo/HDP-site/tela-info1.html
+++ b/Site Completo/HDP-site/tela-info1.html
@@ -61,8 +61,6 @@
                 </div>
             </div>
             <div class="abaOrdenar">
-                <div class="selecaoGeral">
-                </div>
                 <div class="titulo">
                     <h4><strong>DASHBOARD</strong></h4>
                     <p>DETAILS</p>
@@ -82,13 +80,11 @@
                                 dos
                                 sobrenomes</button>
                             <button style="color: red;" onclick="mudar5()"><b style="color: black;">5 - </b> Sala de
-                                Figuras Importantes no
-                                Brasil (Sensor 2) </button>
+                                Figuras Brasileiras (Sensor 2) </button>
                             <button style="color: red;" onclick="mudar6()"><b style="color: black;">6 - </b> Sala da
                                 história da música
                                 Brasileira</button>
-                            <button style="color: red;" onclick="mudar8()"><b style="color: black;">8 - </b> Sala de
-                                exposição de documentos
+                            <button style="color: red;" onclick="mudar8()"><b style="color: black;">8 - </b> Sala de documentos
                                 de
                                 arte</button>
                             <button style="color: red;" onclick="mudar9()"><b style="color: black;">9 - </b> Sala de
@@ -104,6 +100,7 @@
                         <div class="grafico">
                             <canvas id="graficoSala1"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico3" style="text-align: center;">
@@ -112,14 +109,15 @@
                         <div class="grafico">
                             <canvas id="graficoSala3"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico5" style="text-align: center;">
-                        <h3>Métricas na Sala 5 - Sala de Figuras Importantes no
-                            Brasil (S2) </h3>
+                        <h3>Métricas na Sala 5 - Sala de Figuras Brasileiras (S2) </h3>
                         <div class="grafico">
                             <canvas id="graficoSala5"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico6" style="text-align: center;">
@@ -128,15 +126,17 @@
                         <div class="grafico">
                             <canvas id="graficoSala6"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico8" style="text-align: center;">
-                        <h3>Métricas na Sala 8 - Sala de exposição de documentos
+                        <h3>Métricas na Sala 8 - Sala de documentos
                             de
                             arte </h3>
                         <div class="grafico">
                             <canvas id="graficoSala8"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico9" style="text-align: center;">
@@ -145,6 +145,7 @@
                         <div class="grafico">
                             <canvas id="graficoSala9"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
                 </div>
             </div>
