--- a/Site Completo/HDP-site/tela-info2.html
+++ b/Site Completo/HDP-site/tela-info2.html
@@ -56,9 +56,9 @@
 
                     <div class="blocoInterno">
                         <div class="cardInt2">
-                            <h1 style="margin-bottom: 5%;">2hrs</h1>
+                            <h1 style="margin-bottom: 5%;">+2hrs</h1>
                             <h4>4 | 6 </h4>
-                            <h4>Salas</h4>
+                            <h4>Salas fora do Ideal</h4>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
 
                     <div id="grafico" style="text-align: center;">
                         <h3>Percentual de Salas com registros Inadequados</h3>
-                        <div class="grafico" style="justify-content: center;
+                        <div class="graficoP" style="justify-content: center;
                         ">
                             <canvas id="graficoSalas" position=relative width="900" ; height="400"></canvas>
                         </div>
@@ -107,6 +107,7 @@
                         <div class="graficoG">
                             <canvas id="graficoSala3G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico5G" style="text-align: center;">
@@ -114,6 +115,7 @@
                         <div class="graficoG">
                             <canvas id="graficoSala5G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico6G" style="text-align: center;">
@@ -122,6 +124,7 @@
                         <div class="graficoG">
                             <canvas id="graficoSala6G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
 
                     <div id="grafico8G" style="text-align: center;">
@@ -130,6 +133,7 @@
                         <div class="graficoG">
                             <canvas id="graficoSala8G" position="relative" width="3300" ; height="900"></canvas>
                         </div>
+                        <p>Temperatura Ideal: 15°C a 25°C  |  Umidade Ideal: 55% a 65%</p>
                     </div>
                 </div>
 
