--- a/Site Completo/HDP-site/siteHDP.html
+++ b/Site Completo/HDP-site/siteHDP.html
@@ -29,10 +29,8 @@
 
   <div class="fundoInicial" id="home">
     <div class="logo">
-      <div class="texto1">
-        <p><b>HDP</b></p>
-        <p><b>Historical Document</b></p>
-        <p><b>Preservation</b></p>
+      <div class="texto">
+        <img src="../HDP-site/texto_hdp-removebg-preview.png" alt="">
       </div>
     </div>
   </div>
