--- a/Site Completo/HDP-site/siteHDP.html
+++ b/Site Completo/HDP-site/siteHDP.html
@@ -13,7 +13,9 @@
 
     <img src="logohdp1.png" alt="logo">
     <ul class="navbar">
-      <a href="#home"><li class="agora">Home</li></a>
+      <a href="#home">
+        <li class="agora">Home</li>
+      </a>
       <a href="#sobreNos">
         <li>Sobre Nós</li>
       </a>
@@ -28,14 +30,19 @@
   </div>
 
   <div class="fundoInicial" id="home">
-    <div class="logo">
-      <div class="texto1">
-        <p><b>HDP</b></p>
-        <p><b>Historical Document</b></p>
-        <p><b>Preservation</b></p>
+    <div class="blocoGeral">
+      <div class="blocoEspecifico">
+        <div class="linha"></div>
+        <div class="blocoEscrita">
+          <h1>HDP</h1> <br>
+          <h4>Historical Document</h4>
+          <h4>Preservation</h4>
+        </div>
       </div>
     </div>
   </div>
+
+
 
   <div id="sobreNos"></div>
   <div class="banner">
@@ -47,8 +54,8 @@
         por monitorar de perto as métricas de
         temperatura e umidade. Manter esses
         parâmetros dentro dos ideais -
-        temperatura entre 16 e 20°C e umidade
-        entre 30 e 60% - é fundamental para
+        temperatura entre 15 e 25°C e umidade
+        entre 55 e 65% - é fundamental para
         evitar danos aos materiais históricos.
         Com o sensor DHT11 conectado ao
         Arduino UNO, garantimos um controle
@@ -96,20 +103,20 @@
   <div class="missao">
     <div class="textoMissao">
       <h1>Missão</h1>
-    <p>A HDP é uma empresa inovadora que tem como missão
-      principal proteger o patrimônio histórico e cultural de
-      nossos clientes. Utilizando tecnologia de ponta, como o
-      Arduino UNO e o sensor DHT11, oferecemos soluções
-      eficientes para monitoramento e controle de
-      temperatura e umidade em ambientes que abrigam
-      acervos valiosos. Com uma equipe dedicada e
-      especializada, estamos comprometidos em
-      proporcionar tranquilidade e segurança para
-      instituições que valorizam a preservação da história.</p>
+      <p>A HDP é uma empresa inovadora que tem como missão
+        principal proteger o patrimônio histórico e cultural de
+        nossos clientes. Utilizando tecnologia de ponta, como o
+        Arduino UNO e o sensor DHT11, oferecemos soluções
+        eficientes para monitoramento e controle de
+        temperatura e umidade em ambientes que abrigam
+        acervos valiosos. Com uma equipe dedicada e
+        especializada, estamos comprometidos em
+        proporcionar tranquilidade e segurança para
+        instituições que valorizam a preservação da história.</p>
     </div>
     <div class="imgMissao">
-    <img src="mission-icon.png" alt="">
-  </div>
+      <img src="mission-icon.png" alt="">
+    </div>
   </div>
 
   <div class="banner3">
@@ -127,8 +134,16 @@
         que a HDP pode oferecer. Com dados precisos e
         análises detalhadas, ajudamos você a tomar decisões
         informadas para proteger seu valioso acervo.</p>
-        <a href="calculadoraHDP.html"><button>Ir para calculadora</button></a>
+      <a href="calculadoraHDP.html"><button>Ir para calculadora</button></a>
     </div>
+  </div>
+
+  <div class="footer">
+
+    <h4>Contato: HistoricalDocument@gmail.com </h4>
+    <h4>SPTech &copy; 2024</h4>
+    <span class="version">v1.0.0</span>
+
   </div>
 
 </body>
