--- a/dat-acqu-ino copy/index.html
+++ b/dat-acqu-ino copy/index.html
@@ -19,19 +19,19 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #A52A2A;
+            background-color: #370505;
         }
 
         .titulo {
             border-bottom: solid 2px black;
-            color: #DCDCDC;
+            color: #ffffff;
         }
 
         .tituloG {
             height: 15vh;
             width: 100vw;
             font-size: 25px;
-            background-color: #F5DEB3;
+            background-color: #ffffff;
             display: flex;
             align-items: center;
             justify-content: space-evenly;
@@ -42,7 +42,7 @@
         }
 
         .conteudo {
-            background-color: #F5DEB3;
+            background-color: #ffffff;
             display: flex;
             height: 85vh;
             width: 100vw;
