--- a/Site Completo/web-data-viz/public/cadastroHDP.html
+++ b/Site Completo/web-data-viz/public/cadastroHDP.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro | HDP</title>
-    <link rel="stylesheet" href="style-cadastro.css">
+    <link rel="stylesheet" href="css/style-cadastro.css">
 </head>
 
 <body>
     <div class="header">
-        <img src= "logohdp1.png" alt="logo">
+        <img src= "assets/imgs/logohdp1.png" alt="logo">
         <ul class="navbar">
             <a href="siteHDP.html"><li>Home</li></a>
             <a href="siteHDP.html #sobreNos"><li>Sobre Nós</li></a>
