--- a/Site Completo/web-data-viz/public/siteHDP.html
+++ b/Site Completo/web-data-viz/public/siteHDP.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Historical Document Preservation</title>
-  <link rel="stylesheet" href="style-site.css">
+  <link rel="stylesheet" href="css/style-site.css">
 </head>
 
 <body>
   <div class="header">
 
-    <img src="logohdp1.png" alt="logo">
+    <img src="assets/imgs/logohdp1.png" alt="logo">
     <ul class="navbar">
       <a href="#home">
         <li class="agora">Home</li>
@@ -71,7 +71,7 @@
   <div class="banner2">
     <div class="container">
       <div class="box">
-        <img src="pilha-de-livros.png" alt="" class="img3">
+        <img src="assets/imgs/pilha-de-livros.png" alt="" class="img3">
         <p> Mais de 60%dos livros e
           documentos históricos são
           perdidos por ano, devido
@@ -79,7 +79,7 @@
           temperatura e umidade.</p>
       </div>
       <div class="box">
-        <img src="iconeTemperatura.png" alt="" class="img4">
+        <img src="assets/imgs/iconeTemperatura.png" alt="" class="img4">
         <p>É de extrema importância
           manter a temperatura ideal
           em seus acervos para
@@ -88,7 +88,7 @@
           do papel.</p>
       </div>
       <div class="box">
-        <img src="iconeUmidade.png" alt="" class="img5">
+        <img src="assets/imgs/iconeUmidade.png" alt="" class="img5">
         <p>Manter a umidade ideal nos
           acervos é importante para
           preservar a integridade
@@ -115,13 +115,13 @@
         instituições que valorizam a preservação da história.</p>
     </div>
     <div class="imgMissao">
-      <img src="mission-icon.png" alt="">
+      <img src="assets/imgs/mission-icon.png" alt="">
     </div>
   </div>
 
   <div class="banner3">
     <div class="imgCalculadora">
-      <img src="calculadora.icone.ofc.jpg" alt="">
+      <img src="assets/imgs/calculadora.icone.ofc.jpg" alt="">
     </div>
     <div class="containerCalculadora">
       <h2>
