--- a/Site Completo/web-data-viz/public/calculadoraHDP.html
+++ b/Site Completo/web-data-viz/public/calculadoraHDP.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora | HDP</title>
-    <link rel="stylesheet" href="style-calculadora.css">
+    <link rel="stylesheet" href="css/style-calculadora.css">
 </head>
 
 <body>
     <div class="header">
 
-        <img src="logo.png" alt="logo">
+        <img src="assets/imgs/logo.png" alt="logo">
         <ul class="navbar">
           <a href="siteHDP.html"><li>Home</li></a>
             <li class="agora">Calculadora</li>
