--- a/Site Completo/web-data-viz/public/dashboard/dashInicio.html
+++ b/Site Completo/web-data-viz/public/dashboard/dashInicio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | HDP</title>
 
-    <link rel="stylesheet" href="style-dashboard.css">
+    <link rel="stylesheet" href="../css/style-dashboard.css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
         <div class="container">
             <div class="blocoNavbar">
                 <ul class="navbar">
-                    <a href="siteHDP.html"><li>Home</li></a>
-                    <a href="siteHDP.html #sobreNos"><li>Sobre nós</li></a>
+                    <a href="../siteHDP.html"><li>Home</li></a>
+                    <a href="../siteHDP.html #sobreNos"><li>Sobre nós</li></a>
                     <li>|</li>
                     <li style="color: rgb(221, 148, 13);">Dashboard</li>
-                    <a href="loginHDP.html"><li>Sair</li></a>
+                    <a href="../loginHDP.html"><li>Sair</li></a>
                 </ul>
 
             </div>
@@ -36,7 +36,7 @@
                     <p>fernando.brandao@sptech.school</p>
                 </div>
                 <div class="acesso">
-                    <a href="siteHDP.html" style="color: #ffffff;"><h3>HOME</h></a>
+                    <a href="../siteHDP.html" style="color: #ffffff;"><h3>HOME</h></a>
                         <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
                 </div>
             </div>
