passei nossos arquivos para api integrada

--- a/hdp/public/cadastroHDP.html
+++ b/hdp/public/cadastroHDP.html
@@ -12,8 +12,8 @@
     <div class="header">
         <img src= "assets/imgs/logohdp1.png" alt="logo">
         <ul class="navbar">
-            <a href="siteHDP.html"><li>Home</li></a>
-            <a href="siteHDP.html #sobreNos"><li>Sobre Nós</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="index.html"><li>Sobre Nós</li></a>
             <li>|</li>
             <li class="agora">Cadastro</li>
             <a href="loginHDP.html" style="text-decoration: none; cursor: pointer; color: beige;"><li>Login</li></a>
