--- a/hdp/public/index.html
+++ b/hdp/public/index.html
@@ -1,82 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>AquaTech | Página Inicial</title>
-
-    <script src="./js/sessao.js"></script>
-
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Historical Document Preservation</title>
+  <link rel="stylesheet" href="css/style-site.css">
 </head>
 
 <body>
-    <div class="header">
-      <div class="container">
-        <h1 class="titulo">AquaTech</h1>
-        <ul class="navbar">
-          <li class="agora">
-            <a href="#">Inicial</a>
-          </li>
-          <li>
-            <a href="simulador.html">Simulador</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="login.html">Login</a>
-          </li>
-          <li>
-            <a href="cadastro.html">Cadastro</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  
-    <div class="banner">
-      <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
-      </div>
-    </div>
-  
-    <div class="social">
-      <div class="container">
-        <div class="boxes">
-          <div class="box">
-            <img src="assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/growth_color.png">
-            <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
+  <div class="header">
+
+    <img src="assets/imgs/logohdp1.png" alt="logo">
+    <ul class="navbar">
+      <a href="#home">
+        <li class="agora">Home</li>
+      </a>
+      <a href="#sobreNos">
+        <li>Sobre Nós</li>
+      </a>
+      <li>|</li>
+      <a href="cadastroHDP.html" style="text-decoration: none; cursor: pointer; color: beige;">
+        <li>Cadastro</li>
+      </a>
+      <a href="loginHDP.html">
+        <li>Login</li>
+      </a>
+    </ul>
+  </div>
+
+  <div class="fundoInicial" id="home">
+    <div class="blocoGeral">
+      <div class="blocoEspecifico">
+        <div class="linha"></div>
+        <div class="blocoEscrita">
+          <h1>HDP</h1> <br>
+          <h4>Historical Document</h4>
+          <h4>Preservation</h4>
         </div>
       </div>
     </div>
-  
-    <div class="footer">
-      <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-        <span class="version">v1.0.0</span>
+  </div>
+
+
+
+  <div id="sobreNos"></div>
+  <div class="banner">
+    <div class="sobre">
+      <h1>Sobre Nós</h1>
+      <p>Na HDP, reconhecemos que a
+        preservação de acervos históricos e
+        documentos é crucial. Por isso, optamos
+        por monitorar de perto as métricas de
+        temperatura e umidade. Manter esses
+        parâmetros dentro dos ideais -
+        temperatura entre 15 e 25°C e umidade
+        entre 55 e 65% - é fundamental para
+        evitar danos aos materiais históricos.
+        Com o sensor DHT11 conectado ao
+        Arduino UNO, garantimos um controle
+        preciso dessas variáveis, reduzindo em
+        até 60% as chances de perda de livros e
+        documentos.</p>
+
+    </div>
+    <div class="fundoSN">
+    </div>
+  </div>
+
+  <div class="banner2">
+    <div class="container">
+      <div class="box">
+        <img src="assets/imgs/pilha-de-livros.png" alt="" class="img3">
+        <p> Mais de 60%dos livros e
+          documentos históricos são
+          perdidos por ano, devido
+          ao controle indevido de
+          temperatura e umidade.</p>
+      </div>
+      <div class="box">
+        <img src="assets/imgs/iconeTemperatura.png" alt="" class="img4">
+        <p>É de extrema importância
+          manter a temperatura ideal
+          em seus acervos para
+          evitar danos irreversíveis
+          causados pela degradação
+          do papel.</p>
+      </div>
+      <div class="box">
+        <img src="assets/imgs/iconeUmidade.png" alt="" class="img5">
+        <p>Manter a umidade ideal nos
+          acervos é importante para
+          preservar a integridade
+          física dos livros. Umidade
+          excessiva pode levar à
+          proliferação de fungos e
+          mofos</p>
       </div>
     </div>
-  </body>
+  </div>
+
+  <div class="missao">
+    <div class="textoMissao">
+      <h1>Missão</h1>
+      <p>A HDP é uma empresa inovadora que tem como missão
+        principal proteger o patrimônio histórico e cultural de
+        nossos clientes. Utilizando tecnologia de ponta, como o
+        Arduino UNO e o sensor DHT11, oferecemos soluções
+        eficientes para monitoramento e controle de
+        temperatura e umidade em ambientes que abrigam
+        acervos valiosos. Com uma equipe dedicada e
+        especializada, estamos comprometidos em
+        proporcionar tranquilidade e segurança para
+        instituições que valorizam a preservação da história.</p>
+    </div>
+    <div class="imgMissao">
+      <img src="assets/imgs/mission-icon.png" alt="">
+    </div>
+  </div>
+
+  <div class="banner3">
+    <div class="imgCalculadora">
+      <img src="assets/imgs/calculadora.icone.ofc.jpg" alt="">
+    </div>
+    <div class="containerCalculadora">
+      <h2>
+        Acesse nosso Simulador Financeiro!</h2>
+      <p>Nossa calculadora financeira é uma ferramenta
+        poderosa para demonstrar o impacto de nossa solução
+        na sua instituição. Descubra quanto você está perdendo
+        atualmente devido à má gestão de temperatura e
+        umidade e veja o potencial de economia e preservação
+        que a HDP pode oferecer. Com dados precisos e
+        análises detalhadas, ajudamos você a tomar decisões
+        informadas para proteger seu valioso acervo.</p>
+      <a href="calculadoraHDP.html"><button>Ir para calculadora</button></a>
+    </div>
+  </div>
+
+  <div class="footer">
+
+    <h4>Contato: HistoricalDocument@gmail.com </h4>
+    <h4>SPTech &copy; 2024</h4>
+    <span class="version">v1.0.0</span>
+
+  </div>
+
+</body>
+
 
 </html>
