--- a/hdp/public/dashboard/dashInicio.html
+++ b/hdp/public/dashboard/dashInicio.html
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="blocoNavbar">
                 <ul class="navbar">
-                    <a href="../siteHDP.html"><li>Home</li></a>
-                    <a href="../siteHDP.html #sobreNos"><li>Sobre nós</li></a>
+                    <a href="../index.html"><li>Home</li></a>
+                    <a href="../index.html #sobreNos"><li>Sobre nós</li></a>
                     <li>|</li>
                     <li style="color: rgb(221, 148, 13);">Dashboard</li>
                     <a href="../loginHDP.html"><li>Sair</li></a>
@@ -36,7 +36,7 @@
                     <p>fernando.brandao@sptech.school</p>
                 </div>
                 <div class="acesso">
-                    <a href="../siteHDP.html" style="color: #ffffff;"><h3>HOME</h></a>
+                    <a href="../index.html" style="color: #ffffff;"><h3>HOME</h></a>
                         <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
                 </div>
             </div>
