--- a/hdp/public/cadastroHDP.html
+++ b/hdp/public/cadastroHDP.html
@@ -13,7 +13,7 @@
         <img src= "assets/imgs/logohdp1.png" alt="logo">
         <ul class="navbar">
             <a href="index.html"><li>Home</li></a>
-            <a href="index.html"><li>Sobre Nós</li></a>
+            <a href="index.html #sobreNos"><li>Sobre Nós</li></a>
             <li>|</li>
             <li class="agora">Cadastro</li>
             <a href="loginHDP.html" style="text-decoration: none; cursor: pointer; color: beige;"><li>Login</li></a>
