--- a/hdp/public/loginHDP.html
+++ b/hdp/public/loginHDP.html
@@ -12,8 +12,8 @@
     <div class="header">
         <img src="assets/imgs/logohdp1.png" alt="logo">
         <ul class="navbar">
-            <a href="siteHDP.html"><li>Home</li></a>
-            <a href="siteHDP.html #sobreNos"><li>Sobre Nós</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="index.html #sobreNos"><li>Sobre Nós</li></a>
             <li>|</li>
             <a href="cadastroHDP.html"  style="text-decoration: none; cursor: pointer; color: #ffffff;"><li >Cadastro</li></a>
             <li class="agora">Login</li>
